<resources>
    <string name="app_name">commons</string>
    <string name="login_bookcase">登录书柜</string>
    <string name="account_login">学号登录</string>
    <string name="fingerprint_login">指纹登录</string>
    <string name="main_borrow">书籍借阅</string>
    <string name="main_borrow_instructions">最新热书,独家上架</string>
    <string name="main_fetch">快捷取书</string>
    <string name="main_give_back">归还书籍</string>
    <string name="main_recover">借阅记录</string>
    <string name="main_fingerprint_set">指纹设置</string>
    <string name="input_finger">放置手指，录入指纹</string>
    <string name="finger_tip">请将手指放入指纹识别器，按照操作提示录入指纹</string>
    <string name="fingerprint_entry">指纹添加</string>
    <string name="entry_finger">指纹添加</string>
    <string name="register_success">指纹录入成功</string>
    <string name="register_failed">指纹录入失败</string>
    <string name="tip_1">页面将在</string>
    <string name="tip_2">秒后自动返回上一页面...</string>
    <string name="scanning">正在扫描...</string>
    <string name="opening">正在打开指纹仪</string>
    <string name="open_fail">指纹仪打开失败</string>
    <string name="fp_management">指纹管理</string>
    <string name="fp_editor">指纹编辑</string>
    <string name="fp_10">每位用户最多可注册10个指纹</string>
    <string name="finger_editor">编辑</string>
    <string name="fingerprint">指纹</string>
    <string name="finger_add_error">您已注册10个指纹,无法再添加指纹!</string>
    <string name="no_finger">暂无指纹</string>
    <string name="no_user">您还没有登录,请先登录再注册指纹～</string>
    <string name="editor_save">保存指纹</string>
    <string name="delete_finger">删除指纹</string>
    <string name="finger_name_tip">指纹名称不能为空!</string>
    <string name="noneFinger">未知指纹</string>
    <string name="verify_tip">请将手指放置指纹识别器</string>
    <string name="scan_tip">请将图书条形码对准扫码器</string>
    <string name="compare_fail_tip">指纹匹配失败,您可选用学号登录</string>
    <string name="compare_fail">指纹验证失败</string>
    <string name="revalidation">重新验证</string>
    <string name="go_login">去登录</string>
    <string name="button_cancel">取消</string>
    <string name="button_confirm">确定</string>
    <string name="prompt">prompt</string>
    <string name="login_welcome">欢迎您,用户</string>
    <string name="to_login">账号登录</string>
    <string name="login">登录</string>
    <string name="input_number">输入学号</string>
    <string name="input_password">输入密码</string>
    <string name="forgot_password">忘记密码?</string>
    <string name="input_error">用户名或密码输入错误!</string>
    <string name="borrow">书籍借阅</string>
    <string name="borrow_button">借阅</string>
    <string name="fetch">快捷取书</string>
    <string name="network_error">网络异常</string>
    <string name="no_order">无预约图书</string>
    <string name="i_know">知道了</string>
    <string name="no_book">暂无图书</string>
    <string name="has_borrow">已借阅</string>
    <string name="borrow_success">借阅成功</string>
    <string name="book_name">书名</string>
    <string name="book_address">位置</string>
    <string name="borrow_time">借阅时间</string>
    <string name="borrower">借阅者</string>
    <string name="go_borrow">去借阅图书</string>
    <string name="book_left">《</string>
    <string name="book_right">》</string>
    <string name="need_return_time">需归还时间</string>
    <string name="borrow_error">您有借阅书籍未归还，请先归还!</string>
    <string name="borrow_record">借阅记录</string>
    <string name="not_take_book">未取书籍</string>
    <string name="wait_return">待还书籍</string>
    <string name="already_return">已还书籍</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hasDidNotReturn">您有未归还的图书,请先归还再借阅!</string>
    <string name="hasDidReserve">您有预约未取的图书!</string>
    <string name="hasDidNotLogin">您还没有登录,请先登录!</string>
    <string name="bookOutOfCase">该图书非本柜还书,请查看正确还书地址!</string>
    <string name="go_return">去归还</string>
    <string name="go_fetch">去取书</string>
    <string name="fetch_book">取书</string>
    <string name="return_back">归还</string>
    <string name="return_error">归还失败</string>
    <string name="no_record">您的书单暂无信息</string>
    <string name="local_address">位置: </string>
    <string name="lend_time">借阅时间: </string>
    <string name="reserve_time">归还时间: </string>
    <string name="scan_success">扫描完成</string>
    <string name="scan_msg">已为您打开柜门,请还书!</string>
    <string name="confirm_to_return">确认归还</string>
    <string name="return_success">还书成功</string>
    <string name="new_book">新书上架</string>
    <string name="shelves_msg">功能反复,细心上架</string>
    <string name="old_shelves">老书下架</string>
    <string name="open_case">打开柜门</string>
    <string name="manager_log">盘点日志</string>
    <string name="case_set">书柜设置</string>
    <string name="try_again">重试</string>
    <string name="no_layout">布局未绑定</string>
    <string name="loading_fail">加载失败，请稍后重试</string>
    <string name="information_sets">信息设置</string>
    <string name="network_set">网络设置</string>
    <string name="case_number">书柜编号</string>
    <string name="case_name">书柜名称</string>
    <string name="case_door_count">柜门数量</string>
    <string name="save_set">保存设置</string>
    <string name="input_job_number">输入工号</string>
    <string name="manager_login">运维人员登录</string>
    <string name="account_number">账        号:</string>
    <string name="factory_data_reset">恢复出厂设置</string>
</resources>
